Moved view and edit parts into their own components. Added volume control. Added the missing fields. Fixed some alignment issues.

--- a/dashboard/client/src/reactions/ReactionCard.sass
+++ b/dashboard/client/src/reactions/ReactionCard.sass
@@ -45,19 +45,13 @@ div.reaction-card
         color: $color1
         background-color: $background4
         border: 1px solid $border1
+        z-index: 10
 
     button.close-btn
         position: absolute
         top: -1em
         right: 1em
+        z-index: 10
 
     iframe
         border-radius: 5px
-
-    div.video-card
-        border-radius: 5px
-        background-color: $background4
-        padding: 1.2em
-
-        div.audio-info
-            padding: 1em
